[tool.poetry]
name = "test-app"
version = "0.1.0"
description = ""
authors = ["Vlad Kluev <vkluev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "2.0.1"
sentry-sdk = "1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
